--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
-  "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+  "compilerOptions": {"allowJs": true,
+  "paths":{
+    "imagens/*":["./src/pages/imagens/*"]
+  }},
+  "extends": "expo/tsconfig.base",
+  "include": [
+    "src",
+    "src/index.d.ts",
+  ]
 }
